<resources>
    <string name="app_name">WhatsApp</string>
    <string name="phone_number">Phone number</string>
    <string name="author_screen">Please confirm your country code and enter phone number</string>

    <string-array name="country_names">
        <item>Argentina</item>
        <item>Australia</item>
        <item>Austria</item>
        <item>Bangladesh</item>
        <item>Denmark</item>
        <item>France</item>
        <item>Germany</item>
        <item>Greece</item>
        <item>Hungary</item>
        <item>India</item>
        <item>Indonesia</item>
        <item>Israel</item>
        <item>Italy</item>
        <item>Japan</item>
        <item>Kuwait</item>
        <item>Maldives</item>
        <item>Mexico</item>
        <item>Nepal</item>
        <item>New Zealand</item>
        <item>Qatar</item>
        <item>Russia</item>
        <item>Saudi Arabia</item>
        <item>Singapore</item>
        <item>South Korea</item>
        <item>Spain</item>
        <item>Sri Lanka</item>
        <item>Switzerland</item>
        <item>Thailand</item>
        <item>United Arab Emirates</item>
        <item>United Kingdom</item>
        <item>United States</item>
        <item>Yemen</item>
        <item>Zambia</item>
        <item>Zimbabwe</item>

    </string-array>

    <string name="plus">+</string>
    <string name="phone_number_hint">phone number</string>
    <string name="done_txt">Done</string>
    <string name="settings">Settings</string>
    <string name="camera">Camera</string>
    <string name="calls">Calls</string>
    <string name="status">Status</string>
    <string name="chats">Chats</string>
    <string name="edit">Edit</string>
    <string name="broadcast_lists">Broadcast Lists</string>
    <string name="new_group">New Group</string>
</resources>