<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_status"
        android:title="@string/status"
        android:icon="@drawable/ic_status" />
    <item
        android:id="@+id/navigation_calls"
        android:title="@string/calls"
        android:icon="@drawable/ic_calls"/>
    <item
        android:id="@+id/navigation_camera"
        android:title="@string/camera"
        android:icon="@drawable/ic_camera"/>
    <item
        android:id="@+id/navigation_chats"
        android:title="@string/chats"
        android:icon="@drawable/ic_chats"/>
    <item
        android:id="@+id/navigation_settings"
        android:title="@string/settings"
        android:icon="@drawable/ic_settings"/>

</menu>